# Courses

./: README.md
YCP_2018-2022/Fall/2020/CS 330-801/Labs/: CS330_Lab01.docx
YCP_2018-2022/Fall/2020/CS 330-801/Labs/Lab02/: Lab02_answers.docx  zip_file.pcapng  ~$b02_answers.docx
YCP_2018-2022/Fall/2020/CS 340-101/Assignments/Assignment 1 Regular Expressions/: Assignment01_answers.txt
YCP_2018-2022/Fall/2020/CS 340-101/Labs/Lab01/: Lab01_answers.txt
YCP_2018-2022/Fall/2020/CS 370-102/Assignments/CS370_Assign01/: Makefile
YCP_2018-2022/Fall/2020/CS 370-102/Assignments/CS370_Assign02/: Makefile  README.md
YCP_2018-2022/Fall/2020/CS 370-102/Assignments/CS370_Assign02/demo/: RollinTrainLinux  RollinTrainMac
YCP_2018-2022/Fall/2020/CS 370-102/Assignments/CS370_Assign03/CS370_Assign03/: Limelight.cpp  phong.frag
YCP_2018-2022/Fall/2020/CS 370-102/Assignments/CS370_Assign04/CS370_Assign04/: CMakeLists.txt  MatNode.h  WalkingMan.cpp  lighting.h  phong.frag  player.h  submit.txt
YCP_2018-2022/Fall/2020/CS 370-102/Assignments/CS370_Assign04/CS370_Assign04/demos/: WalkingManSolLinux  WalkingManSolMac
YCP_2018-2022/Fall/2020/CS 370-102/Assignments/CS370_Project/: CMakeLists.txt  house.cpp  particle.h
YCP_2018-2022/Fall/2020/CS 370-102/Assignments/CS370_Project/CS370_Project/: CMakeLists.txt  house.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Assignments/CS370_Project/textures/: donut.mtl
YCP_2018-2022/Fall/2020/CS 370-102/Exams/CS370_Exam01/: exam01.cpp  examfunc.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab00/: CMakeLists.txt
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab01/: basicGeometry.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab02/: shadedHexagon.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab03/: CMakeLists.txt  transHexagon.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab04/: CMakeLists.txt  spinningHexagon.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab05/: orthoCube.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab06/: frustumScene.cpp  vmath.h
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab07/: CMakeLists.txt  color_grad.vert  color_mesh.vert  shaderScene.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab08/: color_mesh.vert  fog.frag  fogScene.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab09/: gouraud.vert  gouraudMesh.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab10/: CMakeLists.txt  lighting.h  phong.frag  phongMesh.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab11/CS370_Lab11/: CMakeLists.txt  blendedMesh.cpp  phong.frag
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab12/CS370_Lab12/: CMakeLists.txt  blenderMonkey.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab13/CS370_Lab13/: CMakeLists.txt  basicTex.frag  basicTex.vert  earthMoon.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/CS370_Lab14/CS370_Lab14/: CMakeLists.txt  lighting.h  phong.frag  robotGraph.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab00_Sol/: CMakeLists.txt  helloOpenGL.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab01_Sol/: CMakeLists.txt  basicGeometry.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab02_Sol/: CMakeLists.txt  shadedHexagon.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab03_Sol/: trans.vert  transHexagon.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab04_Sol/: spinningHexagon.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab05_Sol/: CMakeLists.txt  orthoCube.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab06_Sol/: CMakeLists.txt  frustumScene.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab07_Sol/: shaderScene.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab08_Sol/: CMakeLists.txt  color_mesh.vert  fog.frag  fogScene.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab09_Sol/: CMakeLists.txt  gouraud.vert  gouraudMesh.cpp
YCP_2018-2022/Fall/2020/CS 370-102/Labs/SOLUTIONS/CS370_Lab10_Sol/: phongMesh.cpp
YCP_2018-2022/Fall/2020/CS_350_101/Assignments/AATree/: AATree.cpp
YCP_2018-2022/Fall/2020/CS_350_101/Assignments/BST/BST/: BST.cpp
YCP_2018-2022/Fall/2020/CS_350_101/Assignments/IntArrayStack/: IntArrayStack.cpp  submit.properties
YCP_2018-2022/Fall/2020/CS_350_101/Assignments/LinkedList/: LinkedList.cpp  submit.properties
YCP_2018-2022/Fall/2020/CS_350_101/Assignments/SkipList/: Flags.h  SkipList  SkipList.cpp  submit.properties
YCP_2018-2022/Fall/2020/CS_350_101/Exams/CS350_Exam01/: submit.properties
YCP_2018-2022/Fall/2020/CS_350_101/Labs/CS350_Lab01/: Histogram.cpp  Histogram.h  lab01
YCP_2018-2022/Fall/2020/CS_350_101/Labs/CS350_Lab02/: lab02  main.cpp
YCP_2018-2022/Fall/2020/CS_350_101/Labs/CS350_Lab03/: Histogram.cpp
YCP_2018-2022/Fall/2020/CS_350_101/Labs/CS350_Lab05/: lab05  main.cpp
YCP_2018-2022/Fall/2020/HUM 300-101/Module 1/: CHIANG.docx  Readings and Tasks for Week 1.url  Readings and Tasks for Week 2.url  Readings and Tasks for Week 3.url
YCP_2018-2022/Fall/2020/HUM 300-101/Module 1/Wrtiting Prompts/: Writing Prompt 1 Time and Time Travel.url
YCP_2018-2022/Other/Personal Stuff/: FallSchedule.xlsx  ~$FallSchedule.xlsx
YCP_2018-2022/Other/Projects/Eclipse/workspace/.metadata/: version.ini
YCP_2018-2022/Other/Projects/Eclipse/workspace/GUI_Tutorial/src/: module-info.java
YCP_2018-2022/Other/Projects/Eclipse/workspace/Tic_Tac_Toe/CS201_Lab06/: .project  .submit
YCP_2018-2022/Other/Projects/Eclipse/workspace/Tic_Tac_Toe/src/: module-info.java
YCP_2018-2022/Other/Projects/Eclipse/workspace/abaldwin3-Lab06-16453/CS201_Lab06/: .submit
YCP_2018-2022/Spring/2021/CS360-Algorithms/Assignments/01/CS360_InsertionSort/: CMakeLists.txt  insertionSorter.cpp
YCP_2018-2022/Spring/2021/CS360-Algorithms/Assignments/02/CS360_MergeSort/: CMakeLists.txt  mergeSorter.cpp
YCP_2018-2022/Spring/2021/IFS335-Cloud_Infrastructure/Professor_Notes/: AWS Cloud Foundations Course Notes.odt
YCP_2018-2022/Spring/2021/IFS335-Cloud_Infrastructure/Syllabus/: IFS335 Hostler Spring 2021.docx
(+30 files in other folders)
